[package]
name          = "varsun"
version       = "0.1.1"
authors       = ["chikuchikugonzalez <chikuchikugonzalez@gmail.com>"]
description   = "varsun provides shell/command-prompt like variable substition functions."
documentation = "https://chikuchikugonzalez.github.io/docs/crate/varsun/"
repository    = "https://github.com/chikuchikugonzalez/varsun"
readme        = "README.md"
license       = "MIT"

[dependencies]
